# truelayer-challenge

./: Cargo.toml  Dockerfile  README.md
configuration/: base.yaml
src/: funtranslation_client.rs  lib.rs  main.rs  pokemon_client.rs  startup.rs
src/api/: health_check.rs  mod.rs  pokemon.rs
src/configuration/: app.rs
src/models/: mod.rs  pokemon.rs  translation.rs
tests/: helpers.rs
tests/api/: health_check.rs  mod.rs  pokemon.rs
