[package]
name = "truelayer"
version = "0.1.0"
authors = ["Christopher Fleetwood"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "truelayer"

[dependencies]
actix-web = "=4.0.0-beta.19"
actix-http = "=3.0.0-beta.18"
serde = { version = "1.0.133", features= ["derive"] }
serde-aux = { version = "2.3.0" }
serde_json = "1.0.74"
thiserror = "1.0.30"
anyhow = "1.0.52"
reqwest = { version = "0.11.9", features = ["json"]}
config = "0.11.0"
env_logger = "0.9.0"
strum = "0.23"
strum_macros = "0.23"

[dev-dependencies]
actix-rt = "2.5.1"
wiremock = "0.5.8"
tokio = { version = "1", features = ["macros"]}
